Fixed input element bug caused by not using a lesson ID for its questions, visible on any lesson after the first. Added new filter option to display questions with invalid answer data. Fixed boolean not resetting for lessons after the first, lessons withoout questions must not show. Used StripHTML on json lesson title.

--- a/app.css
+++ b/app.css
@@ -242,13 +242,13 @@ input[type=checkbox] {
 }
 
 #creation-parameters label {
-	min-width: 150px;
+	width: 180px;
 	margin-right: 10px;
 }
 
 #creation-parameters input[type=number] {
 	display: inline-block;
-	width: auto;
+	width: 75px;
 }
 
 /* Question Content */
